# template-python

./: .gitignore  CLAUDE.md  Makefile  README.md  llms.txt  pyproject.toml
docs/: README.md
docs/design/: README.md  architecture.md  comment.md  packaging.md  pyproject.md  specs.md  workflow.md
docs/intro/: README.md  concept.md  glossary.md  overview.md  structure.md
docs/specs/: README.md
docs/specs/cli/: design.md  requirements.md
docs/specs/config/: design.md  requirements.md
docs/specs/foundation/error/: design.md  requirements.md
docs/specs/foundation/fs/: design.md  requirements.md
docs/specs/foundation/log/: design.md  requirements.md
docs/specs/foundation/model/: design.md  requirements.md
docs/specs/protocol/: design.md  requirements.md
docs/specs/transform/: design.md  requirements.md
src/example/: __init__.py  cli.py
src/example/config/: __init__.py  app.py  env_var.py  path.py
src/example/foundation/: __init__.py
src/example/foundation/error/: __init__.py  error.py  handler.py
src/example/foundation/fs/: __init__.py  error.py  protocol.py  text.py
src/example/foundation/log/: __init__.py  configurator.py  decorator.py
src/example/foundation/model/: __init__.py  base.py
src/example/protocol/: __init__.py  fs.py
src/example/transform/: __init__.py  context.py  orchestrator.py  provider.py  reader.py  transformer.py  types.py  writer.py
tests/: conftest.py  in_memory_fs.py
tests/integration/: test_integration_cli.py
tests/unit/test_config/: test_app.py  test_env_var.py  test_path.py
tests/unit/test_foundation/test_error/: test_error_handler.py
tests/unit/test_foundation/test_fs/: test_text.py
tests/unit/test_foundation/test_log/: test_configurator.py  test_decorator.py
tests/unit/test_foundation/test_model/: test_core_model.py
tests/unit/test_transform/: fakes.py  test_context.py  test_orchestrator.py  test_provider.py  test_reader.py  test_transformer.py  test_types.py  test_writer.py
